feat: 浏览器架构

--- a/docs/browser/v8.md
+++ b/docs/browser/v8.md
@@ -6,3 +6,11 @@ tags:
 categories:
 - 前端知识
 ---
+
+[comment]: <> (https://segmentfault.com/a/1190000037435824)
+
+[comment]: <> (https://docs.google.com/presentation/d/1YVWcMjrqbUZBnITUaIlo6-uqGCo2Q6iHNg1uz8JDeGY/edit#slide=id.p35)
+
+[comment]: <> (https://source.chromium.org/)
+
+[comment]: <> (https://segmentfault.com/a/1190000018806562)
