--- a/docs/browser/v8.md
+++ b/docs/browser/v8.md
@@ -7,6 +7,10 @@ categories:
 - 前端知识
 ---
 
+## JIT
+<img :src="$withBase('/browser/JIT_process.png')" alt="JIT_process">
+
+
 [comment]: <> (https://segmentfault.com/a/1190000037435824)
 
 [comment]: <> (https://docs.google.com/presentation/d/1YVWcMjrqbUZBnITUaIlo6-uqGCo2Q6iHNg1uz8JDeGY/edit#slide=id.p35)
