--- a/docs/browser/v8.md
+++ b/docs/browser/v8.md
@@ -7,6 +7,136 @@ categories:
 - 前端知识
 ---
 
+## 相关设计思想
+### 函数的本质
+函数其实是一种特殊的对象,函数创建的时候有默认的两个属性name和code,name属性不可写,code属性不可写读
+### 对象属性
+v8为了查找和存储效率,设计了一套复杂的存储策略
+1. 将对象的属性分为常规属性和排序属性
+2. 为了增加查找效率(将属性分类造成了查找的过程变长), 增加了对象内属性
+3. 但是如果对象中的属性过多时,或者存在反复添加或者删除属性的操作,会将线性的存储模式降级为非线性的字典存储模式,这样虽然降低了查找速度,但是却提升了修改对象的属性的速度。
+
+::: tip 常规属性和排序属性
+3. v8将数字属性作为 __排序属性(elements)__ 字符串属性作为 __常规属性(properties)__
+4. 排序属性(elements), 按照索引值大小升序排序; 常规属性(properties), 按照创建时候的顺序排序
+6. 常规属性小于10个的时候是线性数据结构(链表结构),大于10个是非线性数据结构(hash表)
+
+```js
+function Foo() {
+    this[100] = 'test-100'
+    this[1] = 'test-1'
+    this["B"] = 'bar-B'
+    this[50] = 'test-50'
+    this[9] =  'test-9'
+    this[8] = 'test-8'
+    this[3] = 'test-3'
+    this[5] = 'test-5'
+    this["A"] = 'bar-A'
+    this["C"] = 'bar-C'
+}
+var bar = new Foo()
+
+
+for(key in bar){
+    console.log(`index:${key}  value:${bar[key]}`)
+}
+```
+<img :src="$withBase('/browser/v8_properties.png')" alt="v8_properties">
+:::
+
+::: tip 对象内属性
+1. 将一部分常规属性添加到对象本身来增加查找效率
+2. 默认是10个属性,超出的会添加到常规属性中
+<img :src="$withBase('/browser/v8_object_inner_properties.png')" alt="v8_object_inner_properties">
+:::
+
+[Fast properties in V8](https://v8.dev/blog/fast-properties)
+
+### 函数声明和函数表达式
+函数声明的本质是语句，而函数表达式的本质则是表达式。
+
+## v8编译
+### 隐藏类
+1. 为了弥补JS动态类型导致的属性查找相比c静态类型较慢的缺陷
+2. 基于一下两点进行优化: 1.对象创建好之后不会增加属性; 2.对象创建好之后不会删减属性
+3. 对象创建完后有一个map的隐藏属性,这个就是隐藏类
+4. 隐藏类包含了对象属性的地址偏移值
+5. 隐藏类查找属性的步骤: 1.找到隐藏类, 2.找到隐藏类的偏移值
+6. 隐藏类可以共用,这些共用的隐藏类又叫共用类
+7. 如果属性增删,会导致v8重新为对象创建隐藏类
+
+::: tip 共用类 
+两个隐藏类满足下面三个条件
+1. 拥有相同名称的属性
+2. 拥有相同数量的属性
+3. 属性类型相同
+4. 用字面量创建对象的时候,属性的顺序一直
+```js
+// 下面的就不会创建共用类
+let point = {x:100,y:200};
+let point2 = {y:100,x:200};
+```
+:::
+
+::: tip 在优化性能时候需要注意的
+1. 用字面量创建对象的时候属性属性保持一直
+2. 尽量一次性完整的创建对象属性
+3. 尽量避免使用delete操作符
+:::
+
+### 内联缓存 IC
+下面的代码每次调用loadX都会触发隐藏类的查找,尽管隐藏类使用了偏移值来提升查找效率,但是大量的操作仍是比较耗性能的,所以利用内联缓存来优化过程
+```js
+function loadX(o) {
+    return o.x
+}
+var o = { x: 1,y:3}
+var o1 = { x: 3 ,y:6}
+for (var i = 0; i < 90000; i++) {
+    loadX(o)
+    loadX(o1)
+}
+```
+1. v8会观察调用函数的一些关键点执行,并将这些数据缓存下来,这个行为就叫内联缓存,这些数据缓存地方就叫 __反馈向量__
+2. 一个反馈向量的一个插槽中可以包含多个隐藏类的信息
+   - 如果一个插槽中只包含 1 个隐藏类，那么我们称这种状态为单态 (monomorphic); 
+   - 如果一个插槽中包含了 2～4 个隐藏类，那我们称这种状态为多态 (polymorphic);
+   - 如果一个插槽中超过 4 个隐藏类，那我们称这种状态为超态 (magamorphic)。
+   - 查找性能依次下降
+
+::: tip 反馈向量 
+一个表结构属性, 每一项称为一个插槽
+<img :src="$withBase('/browser/v8_feedback.png')" alt="v8_feedback">
+
+- LOAD: 访问对象属性操作
+- STORE: 对象属性赋值操作
+- CALL: 函数调用操作
+
+**比如下面的代码**
+```js
+function foo(){}
+function loadX(o) { 
+    o.y = 4
+    foo()
+    return o.x
+}
+loadX({x:1,y:4})
+```
+**转成字节码**
+Lda开头对应LOAD操作, Sta开头对应STORE操作, Call开头对应CALL类型
+```text
+StackCheck
+LdaSmi [4]
+StaNamedProperty a0, [0], [0] 第三个参数[0],表示放到第一个插槽位
+LdaGlobal [1], [2] 第二个参数[2],表示放到第三个插槽位
+Star r0
+CallUndefinedReceiver0 r0, [4] 第二个参数[4],表示将执行过程数据放到第五个插槽位
+LdaNamedProperty a0, [2], [6] 第三个参数[6],表示放到第7个插槽位
+Return
+```
+:::
+
+
 ## JIT
 <img :src="$withBase('/browser/JIT_process.png')" alt="JIT_process">
 
